--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body {
 	background: rgb(26, 26, 29);
-	background-image: url(rain4.svg);
+	background-image: url(assets/rain4.svg);
 }
 
 header, body {
