--- a/css.css
+++ b/css.css
@@ -1,3 +1,5 @@
+/* Global */
+
 body {
 	background: rgb(26, 26, 29);
 	background-image: url(assets/rain4.svg);
@@ -11,6 +13,8 @@ header, body {
 html, body {
   scroll-behavior: smooth;
 }
+
+/* Media Screens */
 
 @media screen and (max-width: 720px) {
 
@@ -28,6 +32,7 @@ html, body {
     margin-bottom:  -180px;
     z-index: -20;
   }
+
   .logo2 {
       display: block;
     margin-left: auto;
@@ -46,6 +51,7 @@ html, body {
     -1px 1px 0 #000,
      1px 1px 0 #000;
     }
+
     .logo3 {
     display: block;
     margin-left: auto;
@@ -66,11 +72,9 @@ html, body {
      visibility: hidden;
     }
 
-
   .hwrap, .hmove {
   	visibility: hidden;
   }
-
 
   .navRight {
     left: 0;
@@ -91,8 +95,8 @@ html, body {
     	/*margin-left: 120px;*/
 	    margin-bottom:  -60px;
 	    z-index: 20;
-
     }
+
     .logo2 {
       display: block;
     margin-left: auto;
@@ -112,6 +116,7 @@ html, body {
     -1px 1px 0 #000,
      1px 1px 0 #000;
     }
+
     .logo3 {
     display: block;
     margin-left: auto;
@@ -130,7 +135,6 @@ html, body {
     -1px 1px 0 #000,
      1px 1px 0 #000;
     }
-
 
 }
 
@@ -177,7 +181,7 @@ html, body {
   transition: .5s;
 }
 
-/* filter elements */
+/* Filter Elements */
 
 .container {
   overflow: hidden;
@@ -197,7 +201,6 @@ html, body {
   min-width:  120px;
   min-height:  120px;
 }
-
 
 /* The "show" class is added to the filtered elements */
 .show {
@@ -297,8 +300,6 @@ div.scrollmenu a {
   padding: 6px;
 }
 
-
-
 .myBtn:hover {
 	background:linear-gradient(to bottom, #4E4E50 5%, #4E4E50 100%);
 	background-color: #4E4E50;
@@ -372,7 +373,6 @@ div.scrollmenu a {
     color:  #000000;
 }
 
-
 .navFoot {
 	margin-top: 20px;
 	text-align: center;
@@ -381,7 +381,6 @@ div.scrollmenu a {
   padding:  6px;
   margin-left:  -20px;
   margin-right:  -8.2px;
-
 }
 
 .dotCenter {
@@ -428,37 +427,7 @@ div.scrollmenu a {
   transition: all 0.2s ease-in-out;
 }
 
-/*.navMenu a:nth-child(1):hover ~ .dot {
-  -webkit-transform: translateX(45px);
-  transform: translateX(45px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
 
-.navMenu a:nth-child(2):hover ~ .dot {
-  -webkit-transform: translateX(130px);
-  transform: translateX(130px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-.navMenu a:nth-child(3):hover ~ .dot {
-  -webkit-transform: translateX(205px);
-  transform: translateX(205px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-.navMenu a:nth-child(4):hover ~ .dot {
-  -webkit-transform: translateX(256px);
-  transform: translateX(256px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}*/
 
 
 
