--- a/test.css
+++ b/test.css
@@ -8,8 +8,46 @@ body {
   margin: auto;
 }
 
+/*body:after {
+  animation: grain 12s steps(10) infinite;
+  background-image: url("/assets/images/vhs1.png");
+  content: "";
+  height: 300%;
+  left: -50%;
+  opacity: 0.1;
+  position: fixed;
+  top: -100%;
+  width: 300%;
+  z-index: -50;
+  filter: blur(812px);
+  -webkit-filter: blur(8px);
+}
+
+@keyframes grain {
+  0%, 100% { transform:translate(0, 0) }
+  10% { transform:translate(-5%, -10%) }
+  20% { transform:translate(-15%, 5%) }
+  30% { transform:translate(7%, -25%) }
+  40% { transform:translate(-5%, 25%) }
+  50% { transform:translate(-15%, 10%) }
+  60% { transform:translate(15%, 0%) }
+  70% { transform:translate(0%, 15%) }
+  80% { transform:translate(3%, 35%) }
+  90% { transform:translate(-10%, 10%) }
+}*/
+
 h2, p, a {
     color: white;
+}
+
+@media only screen and (max-width: 480px) {
+  #data-container {
+    padding-left: 5% !important;
+    padding-right: 5% !important;
+  }
+  .logo2 {
+    font-size: 1.65em !important;
+  }
 }
 
 .searchAttribute {
@@ -25,7 +63,6 @@ h2, p, a {
 #radio-color {
   accent-color: red;
 }
-
 
 #cover-image {
     max-width: 150px;
@@ -49,7 +86,6 @@ h2, p, a {
   }
 
 #item {
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -71,17 +107,15 @@ h2, p, a {
   /* Logo Elements */
 
 .logPos {
-  margin-bottom: 80px;
+  margin-top: -15px;
+  margin-bottom: 5px;
 }
 
 .logo {
   display: block;
     margin-left: auto;
     margin-right: auto;
-    /*margin-left:  calc(50% - 70px);*/
-    max-width:  150px;
-    /*margin-left: 120px;*/
-      margin-bottom: -50px;
+    max-width:  175px;
     z-index: 20;
   }
 
@@ -89,14 +123,11 @@ h2, p, a {
     display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -20px;
     font-weight:  600;
-    /*font-size:  1em;*/
     font-size: 2em;
     color:  #ffffff;
-    /*max-width:  300px;*/
     max-width: 500px;
-    margin-top:  40px;
-    margin-bottom:  10px;
     z-index: 220;
     text-shadow:
   -1px -1px 0 #000,  
@@ -109,13 +140,11 @@ h2, p, a {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -20px;
     font-weight:  400;
     font-size: 16px;
     color:  #c4c4c4;
-    /*max-width:  300px;*/
     max-width: 500px;
-    margin-top:  -10px;
-    margin-bottom:  -40px;
     z-index: 220;
     text-shadow:
   -1px -1px 0 #000,  
@@ -143,11 +172,6 @@ h2, p, a {
   cursor:pointer;
   font-size:36px;
   color: #FFFFFF;
-  /*text-shadow:
-    -1px -1px 0 #000,  
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-      1px 1px 0 #000;*/
   font-weight:bold;
   text-decoration:none;
   padding: 6px;
@@ -173,20 +197,18 @@ h2, p, a {
 .navHead {
 	text-align: center;
   background-color: #f5f5f5;
-  padding:  6px;
-  /*margin-left:  -20px;
-  margin-right:  -8.2px;*/
+  padding:  12px;
 }
 
 .menu-space {
-	margin-left: 7px;
+	padding: 5px;
 }
 
 .navMenu a {
   z-index: 1000;
   color: #000000;
   text-decoration: none;
-  font-size: 1em;
+  font-size: 1.2em;
   text-transform: uppercase;
   font-weight: 600;
   display: inline-block;
@@ -211,7 +233,7 @@ h2, p, a {
   margin: 0 auto;
   display: block;
   padding:15px;
-  border-radius: 10px;
+  border-radius: 25px;
   margin-bottom: 5px;
   width: 50%;
 }
